MDEV-29056 Replica thread reports error on ALTER ONLINE after LOCK WRITE

Commit 878a92e (MDEV-28943) changes the behavior of ALTER TABLE under
prelocking. It now ignores passed LOCK= value in that case.

However, LOCK TABLES command is never replicated, so the replica node
remains unaware of it.

The solution would be to guess on the replica side on the mode used by
master. To make a deduction reliable, master's locked_tables_mode state
is passed for query log events.