sql/log_event.cc
@@ -716,7 +716,7 @@ const char* Log_event::get_type_str()
 Log_event::Log_event(const uchar *buf,
                      const Format_description_log_event* description_event)
   :temp_buf(0), exec_time(0), cache_type(Log_event::EVENT_INVALID_CACHE),
-    checksum_alg(BINLOG_CHECKSUM_ALG_UNDEF)
+    master_ltm(0), checksum_alg(BINLOG_CHECKSUM_ALG_UNDEF)
 {
 #ifndef MYSQL_CLIENT
   thd= 0;
@@ -1600,6 +1600,12 @@ Query_log_event::Query_log_event(const uchar *buf, uint event_len,
       CHECK_SPACE(pos, end, host.length);
       host.str= (char *)pos;
       pos+= host.length;
+      break;
+    }
+    case Q_LTM:
+    {
+      CHECK_SPACE(pos, end, 1);
+      master_ltm= *pos++;
       break;
     }
     case Q_HRNOW:
